<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="Detalles de deudas"
        android:key="pref_debts"
        >
        <ListPreference
            app:key="moneySign"
            app:title="Simbolo de moneda"
            app:entries="@array/moneySign"
            app:entryValues="@array/moneySign"
            app:defaultValue="$"/>
    </PreferenceCategory>

    <!--
    <PreferenceCategory
        android:title="Notificaciones"
        android:key="pref_notifications">
        <ListPreference
            app:key="notificationAnticipation"
            app:title="Anticipar notificaciones"
            app:entries="@array/notificationAnticipation"
            app:entryValues="@array/notificationAnticipationValues"
            app:defaultValue="0"
            />

    </PreferenceCategory>
    -->

    <PreferenceCategory
        app:key="appDetails"
        app:title="@string/acerca_de"
        >
        <PreferenceScreen
            android:title="@string/politica_de_privacidad"
            android:key="policitica_de_privacidad"
            android:summary="@string/leer_politica_privacidad_y_terminos"/>
        <PreferenceScreen
            android:title="@string/calificanos_en_play_store"
            android:key="calificar_play_store"
            android:summary="@string/tu_opinion_es_importante_para_nosotros"/>
        <PreferenceScreen
            android:title="@string/version"
            android:key="version_app"
            android:summary="1.0"/>

    </PreferenceCategory>
</PreferenceScreen>